--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 layout: page
 title: "About"
 description: "Hey, this is Riki."
-header-img: "img/jz-photo.png"
+header-img: "img/Arknights3.jpg"
 ---
 
 <!-- Language Selector -->
