--- a/about.html
+++ b/about.html
@@ -15,12 +15,10 @@ header-img: "img/Arknights3.jpg"
 <div class="zh post-container">
 
     <!--copied from markdown -->
-    <blockquote><p>荣！立直一发断幺dora2，满贯！<br>
-    你永远也到达不了你所预测的“真实”</p></blockquote>
+    <blockquote><p>你永远也到达不了你所预测的“真实”</p></blockquote>
 
-    <p>Hey，我是<strong>金璋(Riki)</strong>，一个周杰伦歌迷，现在在USTC读书。小朋友要有小朋友的亚子，好好毒树！</p>
+    <p>Hey，我是<strong>金璋(Riki)</strong>，现在在USTC读书。</p>
 
-    <p>工作、学习之余，我还是一个Jojo爱好者，同时也非常喜欢明日方舟。</p>
 
     
 </div>
